csce242/assignments/03-page-layout/styles.css
/*Main Structure*/
html {
    background: #FFFFFF;
}
body {
    font-family: Arial, Helvetica, sans-serif;
    background: #F2EED8;
    width: 80%;
    margin: 5px auto;
    border: 1px solid #A4BFB8;
}
#main-content, #main-header {
    background: #F2EED8;
}
#bottom-rows {
    background: #F2EED8;
}
.bottom-row {
    display: block;
    color:#FFFFFF;
    margin: 0 15px;
    padding:0;
}
.rowof3 {
    width:60%;
    margin: auto;
}
.bottom-row-color {
    background: #5E888C;
    margin: 10px 0;
    height: 70%;
}
.bottom-row-color2 {
    background: #A4BFB8;
    margin: 10px 0;
}
#main-footer {
    background: #D98484;
    padding: 10px;
    margin: auto;
}
.first-row {
    margin: 5px;
}
.flex-container {
    padding: 0;
}

/*Images*/
.first-row-image img {
    display: block;
    margin: auto;
    padding: 0 20px;
    width: 80%;
    margin-top: -35px;
}
.bottom-row-image img {
    display: block;
    margin: auto;
    width: 150px;
}

/*Navigation*/
#main-nav ul {
    padding-left: 0;
    text-align: center;
    margin: 1px 0;
}
#main-nav li {
    list-style-type: none;
    background: #D98484;
    padding: 10px;
    border: 1px solid #A4BFB8;
    flex:1;
}
#main-nav a {
    text-decoration: none;
    font-size:x-large;
    color: #FFFFFF;
}

/*Typography*/
#main-header h1 {
    font-size: 42px;
    color: #5E888C;
    text-align: center;
    padding: 30px;
    margin: 0;
}
#important-txt {
    color: #5E888C;
    margin: 40px 5px;
}
.first-row h3 {
    text-align: center;
    background: #5E888C;
    padding: 10px;
    color: #FFFFFF;
    margin: 0;
    position: relative;
    z-index: 2;
}
.bottom-row h3 {
    margin: 8px;
    margin-left: 0;
}
.bottom-row p {
    margin-top: 0;
}
#main-footer p {
    color: #FFFFFF;
    text-align: center;
}

/*Larger devices*/
@media (min-width: 768px) {
    .one {
        flex: 1;
    }
    .four {
        flex: 4;
    }
    .flex-container, .rowof3 {
        display: flex;

    }
    #main-nav ul {
        display: flex;
        text-align: center;
    }
    .bottom-rows {
        display: block;
    }
}

